tests/machine/x/c/map_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_assign.c:24:9: error: ‘ScoresItem’ has no member named ‘data’
   24 |   scores.data["bob"] = 2;
      |         ^
/workspace/mochi/tests/machine/x/c/map_assign.c:25:24: error: ‘ScoresItem’ has no member named ‘data’
   25 |   printf("%d\n", scores.data["bob"]);
      |                        ^

   1: #include <stdio.h>
